Fix analyzer problems

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: codemagic_manager
 description: Package allowing to query and manage Codemagic builds
-version: 0.1.0
+version: 0.1.1
 homepage: https://roszkowski.dev
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   dio: ^3.0.9
   freezed_annotation: ^0.7.1
+  meta: ^1.1.8
 
 dev_dependencies:
   flutter_test:
