--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,7 +14,7 @@ linter:
     - library_names
     - file_names
     - library_prefixes
-    - non_constant_identifier_names
+    # - non_constant_identifier_names
     - constant_identifier_names # prefer
     - directives_ordering
     - lines_longer_than_80_chars # avoid
