--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,9 @@
 name: codemagic_manager
 description: Package allowing to query Codemagic builds and applications from the recently exposed API
-version: 0.1.2+1
+version: 0.1.3
 homepage: https://roszkowski.dev
 issue_tracker: https://github.com/orestesgaolin/codemagic_manager/issues
 repository: https://github.com/orestesgaolin/codemagic_manager
-documentation: https://pub.dev/documentation/codemagic_manager/latest/
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
