--- a/codemagic_manager/pubspec.yaml
+++ b/codemagic_manager/pubspec.yaml
@@ -1,6 +1,7 @@
 name: codemagic_manager
-description: Package allowing to query Codemagic builds and applications from the recently exposed API
-version: 0.2.0
+description: Package allowing to query Codemagic builds and applications from
+  the recently exposed API
+version: 0.2.1
 homepage: https://roszkowski.dev
 issue_tracker: https://github.com/orestesgaolin/codemagic_manager/issues
 repository: https://github.com/orestesgaolin/codemagic_manager
@@ -9,15 +10,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dio: ^3.0.9
-  freezed_annotation: ^0.7.1
+  dio: ^3.0.10
+  freezed_annotation: ^0.11.0+1
   meta: ^1.1.8
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner: ^1.10.0
-  freezed: ^0.10.9
-  json_serializable: ^3.3.0
-
-flutter:
+  freezed: ^0.11.5
+  json_serializable: ^3.4.0
