--- a/codemagic_manager/example/pubspec.yaml
+++ b/codemagic_manager/example/pubspec.yaml
@@ -13,10 +13,8 @@ dependencies:
     sdk: flutter
   codemagic_manager:
     path: ../
-
-  cupertino_icons: ^0.1.3
-
-dev_dependencies:
+  cached_network_image: ^2.4.1
+  cupertino_icons: ^1.0.1
 
 flutter:
   uses-material-design: true
