--- a/codemagic_manager/pubspec.yaml
+++ b/codemagic_manager/pubspec.yaml
@@ -1,20 +1,19 @@
 name: codemagic_manager
 description: Package allowing to query Codemagic builds and applications from
   the recently exposed API
-version: 0.2.1
+version: 0.3.0-nullsafety
 homepage: https://roszkowski.dev
 issue_tracker: https://github.com/orestesgaolin/codemagic_manager/issues
 repository: https://github.com/orestesgaolin/codemagic_manager
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
-  dio: ^3.0.10
-  freezed_annotation: ^0.11.0+1
-  meta: ^1.1.8
+  json_annotation: ^4.0.0-nullsafety.0
+  meta: ^1.3.0-nullsafety.6
 
 dev_dependencies:
-  build_runner: ^1.10.0
-  freezed: ^0.11.5
-  json_serializable: ^3.4.0
+  build_runner: ^1.10.9
+  json_serializable: ^4.0.0-nullsafety.0
+  test: ^1.16.0-nullsafety.13
