--- a/codemagic_manager/pubspec.yaml
+++ b/codemagic_manager/pubspec.yaml
@@ -1,18 +1,19 @@
 name: codemagic_manager
 description: Package allowing to query Codemagic builds and applications from
   the recently exposed API
-version: 0.3.0-nullsafety.1
+version: 0.3.0
 homepage: https://roszkowski.dev
 issue_tracker: https://github.com/orestesgaolin/codemagic_manager/issues
 repository: https://github.com/orestesgaolin/codemagic_manager
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  json_annotation: ^4.0.0-nullsafety.0
+  json_annotation: ^4.0.0
+  meta: ^1.3.0
 
 dev_dependencies:
-  build_runner: ^1.10.9
-  json_serializable: ^4.0.0-nullsafety.0
-  test: ^1.16.0-nullsafety.13
+  build_runner: ^2.0.3
+  json_serializable: ^4.1.1
+  test: ^1.17.4
