--- a/codemagic_manager/pubspec.yaml
+++ b/codemagic_manager/pubspec.yaml
@@ -1,7 +1,7 @@
 name: codemagic_manager
 description: Package allowing to query Codemagic builds and applications from
   the recently exposed API
-version: 0.4.0+1
+version: 0.4.0
 homepage: https://roszkowski.dev
 issue_tracker: https://github.com/orestesgaolin/codemagic_manager/issues
 repository: https://github.com/orestesgaolin/codemagic_manager
