--- a/codemagic_manager/.github/workflows/copilot-setup-steps.yml
+++ b/codemagic_manager/.github/workflows/copilot-setup-steps.yml
@@ -38,7 +38,7 @@ jobs:
           flutter-version: 3.32.8
           channel: stable
           cache: true
-          cache-key: flutter-:os:-:channel:-:version:-:arch:-
+          cache-key: flutter-:os:-:channel:-:version:-cache
 
       - name: 📦 Install Dependencies
         run: |
