chore: add formatter section and re-enable null checks in equality operators

--- a/codemagic_manager/analysis_options.yaml
+++ b/codemagic_manager/analysis_options.yaml
@@ -69,3 +69,6 @@ linter:
     - hash_and_equals
     - avoid_equals_and_hash_code_on_mutable_classes # avoid
     - avoid_null_checks_in_equality_operators
+
+formatter:
+  page_width: 120
